<resources>
    <string name="app_name">TicTacToeNodeJs</string>
    <string name="title_activity_login">Sign in</string>
    <string name="restart">New Game</string>
    <string name="rematch">Rematch</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_title">Tic Tac Toe</string>
    <string name="play_single_player">Single Player</string>
    <string name="play_multi_player">Play with a Friend</string>
    <string name="statistics">Statisics</string>
    <string name="exit">Exit Game</string>
    <string name="sp_match_win_count">Single Player Wins: Loses: Draws:</string>
    <string name="mp_match_win_count">Multiplayer Wins: Loses: Draws:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="losses">Losses:</string>
    <string name="wins">Wins:</string>
    <string name="draws">Draws:</string>
    <string name="single_player_wins">Single player:</string>
    <string name="multiplayer_wins">Multiplayer:</string>
    <string name="_0">0</string>
    <string name="statistics_title">X O X O X</string>
</resources>
