<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/statistics_fragment2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="120dp"
        android:text="@string/single_player_wins"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/single_player_wins"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/single_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wins"
        android:layout_marginTop="49dp"
        app:layout_constraintTop_toBottomOf="@+id/single_player_wins"
        android:layout_marginLeft="75dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/single_losses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/losses"
        app:layout_constraintTop_toBottomOf="@id/single_wins"
        android:layout_marginLeft="75dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/single_draws"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draws"
        app:layout_constraintTop_toBottomOf="@id/single_losses"
        android:layout_marginLeft="75dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/multi_player_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="60dp"
        android:text="@string/multiplayer_wins"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/single_draws" />

    <TextView
        android:id="@+id/multi_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wins"
        app:layout_constraintTop_toBottomOf="@id/multi_player_wins"
        android:layout_marginLeft="75dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/multi_losses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/losses"
        app:layout_constraintTop_toBottomOf="@id/multi_wins"
        android:layout_marginLeft="75dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/multi_draws"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draws"
        app:layout_constraintTop_toBottomOf="@id/multi_losses"
        android:layout_marginLeft="75dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"/>



</android.support.constraint.ConstraintLayout>